src/index.css
/* ... */
.about-left {
  margin: 0;
  flex: 1;
  align-items: left;
  display: flex;
  flex-direction: column;
  text-align: left;
}
.mariowario{
  width: 100%;
  height: 20rem;
  position: relative;
  flex: 1;
  display: flex;
  /* background-color: red; */
  position: relative;
  justify-content: flex-end;
}

.mario1{
  width: 55%;
  height: 100%;
  object-fit: cover;
  object-position: -210px;
  z-index: 2;
  box-shadow: 0 6px 10px rgba(0,0,0,0.15);
  border: #333 1px solid;
  border-radius: 0.3rem;
  transition: transform 0.3s ease;
}
.mario2 {
  width: 50%;
  height: 100%;
  object-fit: cover;
  position: absolute;
  object-position: -200px;
  left: 0;
  bottom: -80px;
  box-shadow: 0 6px 10px rgba(0,0,0,0.15);
  border: #333 1px solid;
  border-radius: 0.3rem;
  transition: transform 0.3s ease ;
}
.mario1:hover, .mario2:hover {
  transform: scale(1.1);
  z-index: 2;
}
.abouthead{
  margin: 0;
  padding:0;
  line-height: 1.5rem;
  font-family: markazi;
}
.aboutpara{
  font-family: karla;
  max-width: 23rem;
}
.footer-container {
  background-color: #495E57;
}
.footer-container p {
  font-weight: bold;
  font-size: 1.4rem;
  margin: 0;
  padding: 0;

}
.footer-content{
  max-width: 60%;
  margin: auto;
  padding: 2rem 0;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  color: white;
  font-family: 'Karla', sans-serif;
}

.footer-logo {
  max-width: 6rem;
  height: auto;
  margin-top: .35rem;
}

.footer-links {
  list-style: none;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0;
  margin: 0;
  margin-top: 0.7rem;
}
.social-logo {
  height: 2rem;
  width: auto;
  transition: transform 0.3s ease;
}
.social-logo:hover {
  transform: scale(1.2);
}
.contact {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  font-family: karla;
  font-size: 1rem;
}
.contact ul{
  list-style: none;
  padding: 0;
  margin:0;
  line-height: 1.5rem;
}
.contact li{
  display: flex;
  align-items: center;
  margin-bottom: 0.2rem;
}

.contact-icon {
  height: 1.2rem;
  width: auto;
  margin-right: 0.5rem;
}
.booking {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  margin: auto;
  max-width: 60%;
  padding: 2rem;
}
.form {
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
  border: #495E57 2px solid;
  border-radius: 2rem;
  padding: 2rem;
}
.form-row{
  display: flex;
}
.form-row label {
  font-family: 'Karla', sans-serif;
  font-weight: 700;
  text-align: left;
  flex: .3;
}
.form input, .form select {
  flex: 1;
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 8px;
  font-family: 'Karla', sans-serif;
  font-size: 1rem;
}

.form input:focus, .form select:focus {
  border-color: #F4CE14;
  outline: none;
}

.form input.input-success, .form select.input-success {
  border-color: #4caf50;
}

.form input.input-error, .form select.input-error {
  border-color: #b00020;
}

.form-row {
  display: grid;
  grid-template-columns: 0.4fr 1fr;
  gap: 1rem;
  align-items: center;
}
.input-column {
  flex: 1;
  display: flex;
  flex-direction: column;
  position: relative;
}

.error {
  margin-top: 0.25rem;
  font-size: 0.8rem;
  color: #b00020;
  position: absolute;
  bottom: -1.2rem;
}

.primary-btn{
  font-family: 'Karla', sans-serif;
  font-weight: 800;
  background-color: #F4CE14;
  color: #333;
  border: none;
  padding: 1rem 1.5rem;
  font-size: 1.2rem;
  cursor: pointer;
  border-radius: 12px;
  transition: background-color 0.3s ease;
}

.primary-btn:hover{
  opacity: 0.8;
}
.primary-btn:active{
  color: #F4CE14;
  border-color: #F4CE14;
}
.primary-btn:disabled {
  background-color: #ccc;
  color: #666;
  cursor: not-allowed;
}
.confirmation {
  margin: auto;
}
.confirmation h2 {
  text-align: center;
  font-family: 'Markazi Text', serif;
  font-size: 3rem;
  margin-bottom: 2rem;
}
.confirmation-details {
  border: 2px solid #495E57;
  border-radius: 12px;
  padding: 2rem;
  display: grid;
  row-gap: 1.25rem;
  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
}

.detail-row {
  display: grid;
  grid-template-columns: 0.4fr 1fr;
  gap: 1rem;
  align-items: center;
}

.label {
  font-family: 'Karla', sans-serif;
  font-size: larger;
  font-weight: 800;
  color: #495E57;
  text-align: left;
}

.value {
  font-family: 'Karla', sans-serif;
  font-size: large;
  color: #333;
  text-align: right;
}

.confirmation-buttons {
  display: flex;
  justify-content: space-between;
  margin-top: 2rem;
}
.confirmation-buttons button {
  font-family: 'Karla', sans-serif;
  font-weight: 800;
  background-color: #F4CE14;
  color: #333;
  border: none;
  width: 10rem;
  padding: 1rem 1.5rem;
  font-size: 1.2rem;
  cursor: pointer;
  border-radius: 12px;
  transition: background-color 0.3s ease;
}
.confirmation-buttons button:hover {
  background-color: #495E57;
  color: white;  
  border: white 0.1rem solid;   
  padding:0.9rem; /* slightly smaller padding on hover */ 
}
.confirmation-buttons button:active{
  color: #F4CE14;
  border-color: #F4CE14;
}
.thankyou {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  max-width: 100%;
  margin: auto;
  padding: 2rem;
  border-radius: 12px;
  height: 50vh;
}
.thankyou h2 {
  text-align: center;
  font-family: 'Markazi Text', serif;
  font-size: 3rem;
  margin-bottom: 2rem;
  margin: 0;
}
.thankyou p {
  font-family: 'Karla', sans-serif;
  font-size: 1.2rem;
  text-align: center;
  margin-bottom: 1rem;
}
.thankyou span {
  font-weight: 700;
  text-decoration: underline;
}
.thankyou button{
  font-family: 'Karla', sans-serif;
  font-weight: 800;
  background-color: #F4CE14;
  color: #333;
  border: none;
  width: 15rem;
  padding: 1rem 1.5rem;
  font-size: 1.2rem;
  cursor: pointer;
  border-radius: 12px;
  transition: background-color 0.3s ease;
}
.menu {
  max-width: 60%;
  margin: auto;
  padding-bottom: 5rem;
}
.title-and-filters {
  display: flex;
  flex-direction: row;
  align-items: top;
  justify-content: space-between;
  margin-top: 3rem;
}
/* ... */

